# Home

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md
app/: CMakeLists.txt
app/component/inc/: PlayerComponent.h
app/component/src/: PlayerComponent.cpp
app/player/state/inc/: FallState.h  IdleState.h  JumpState.h  PlayerState.h  WalkState.h
app/player/state/src/: FullState.cpp  IdleState.cpp  JumpState.cpp  WalkState.cpp
app/scene/inc/: AppScene.h
app/scene/src/: AppScene.cpp
app/school/inc/: Course.h  Exam.h  Schedule.h  Snake.h  Student.h  Teacher.h
app/school/src/: Course.cpp  Exam.cpp  Schedule.cpp  Snake.cpp  Student.cpp  Teacher.cpp
app/web/inc/: Customer.h  SIcal.h  StuSchedule.h
app/web/src/: Customer.cpp  StuSchedule.cpp
assets/config/: config.json
engine/: CMakeLists.txt
engine/component/inc/: ColliderComponent.h  Component.h  ParallaxComponent.h  PhysicsComponent.h  SpriteComponent.h  TileLayerComponent.h  TransformComponent.h
engine/component/src/: ColliderComponent.cpp  ParallaxComponent.cpp  PhysicesComponent.cpp  SpriteComponent.cpp  TileLayerComponent.cpp  TransformComponent.cpp
engine/core/inc/: Config.h  Context.h  Core.h  Time.h
engine/core/src/: Config.cpp  Context.cpp  Core.cpp  Time.cpp
engine/input/inc/: InputManager.h
engine/input/src/: InputManager.cpp
engine/object/inc/: Object.h
engine/object/src/: Object.cpp
engine/physics/inc/: PhysicsEngine.h
engine/physics/src/: PhysicsEngine.cpp
engine/render/inc/: Camera.h  Renderer.h  Sprite.h  TextRenderer.h
engine/render/src/: Camera.cpp  Renderer.cpp  Sprite.cpp  TextRenderer.cpp
engine/resource/inc/: AudioManager.h  FontManager.h  ResourceManager.h  TextureManager.h
engine/resource/src/: AudioManager.cpp  FontManager.cpp  ResourceManager.cpp  TextureManager.cpp
engine/scene/inc/: LevelLoader.h  Scene.h  SceneManager.h
engine/scene/src/: LevelLoader.cpp  Scene.cpp  SceneManager.cpp
main/: CMakeLists.txt
main/inc/: main.h
main/src/: main.cpp
test/: CMakeLists.txt
utils/: CMakeLists.txt
utils/file/inc/: File.h
utils/file/src/: File.cpp
utils/json/inc/: Json.h  JsonView.h  JsonViewConst.h
utils/json/src/: Json.cpp  JsonView.cpp  JsonViewConst.cpp  test.cpp
utils/log/inc/: Log.h
utils/log/src/: Log.cpp
utils/net/inc/: Net.h  Url.h
utils/net/src/: Net.cpp  Url.cpp
utils/rect/inc/: Rect.h
utils/time/inc/: Time.h
utils/time/src/: Time.cpp
